sumo/tests/traci/VariableRetrieval/MeMeDetector/errors/UnsupportedVariable/testclient.prog
simstep 48 1
getvariable 161 255 dummy
simstep 49 1
